--- a/package.json
+++ b/package.json
@@ -21,11 +21,17 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.8.0",
+    "@types/jquery": "^3.5.14",
     "antd": "5.0.0",
     "aplayer": "^1.10.1",
     "classnames": "^2.3.2",
     "i18next": "^22.0.6",
+    "jquery": "^3.6.1",
+    "lodash": "^4.17.21",
     "mockjs": "^1.1.0",
+    "rc-queue-anim": "^2.0.0",
+    "rc-scroll-anim": "^2.7.6",
+    "rc-texty": "^0.2.0",
     "react": "17.x",
     "react-aplayer": "^1.0.0",
     "react-dom": "17.x",
