--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
   "dependencies": {
     "@ant-design/icons": "^4.8.0",
     "@types/jquery": "^3.5.14",
+    "ahooks": "^3.7.3",
     "antd": "5.0.0",
     "aplayer": "^1.10.1",
     "classnames": "^2.3.2",
+    "hooks": "^0.3.2",
     "i18next": "^22.0.6",
     "jquery": "^3.6.1",
     "lodash": "^4.17.21",
