--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "antd": "5.0.0",
     "aplayer": "^1.10.1",
     "classnames": "^2.3.2",
+    "dummyjs": "^1.1.7",
     "hooks": "^0.3.2",
     "i18next": "^22.0.6",
     "jquery": "^3.6.1",
@@ -39,6 +40,8 @@
     "react-dom": "17.x",
     "react-fast-marquee": "^1.3.5",
     "react-i18next": "^12.0.0",
+    "react-infinite-scroller": "^1.2.6",
+    "react-masonry-css": "^1.0.16",
     "react-particles": "^2.5.3",
     "tsparticles": "^2.5.3",
     "tsparticles-engine": "^2.5.2",
